--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.7",
+    "js-tiktoken": "^1.0.15",
     "next": "14.2.15",
+    "openai-gpt-token-counter": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-markdown": "^8.0.6",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
